--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Portfolio
 email: dimitar_dimitrov12@mail.bg
 description: Hi there !
 destination: docs
-baseurl: "/Portfolio" 
+baseurl: "/Portfolio-ENG" 
 url: "" 
 twitter_username: dimitar12101
 github_username:  mitaka1210
